--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.zeggytechnologies.000webhostapp.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://zeggyraph.github.io/famousraph</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +2347031612572</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Port Harcourt, Nigeria</li>
                 </ul>
@@ -645,7 +645,7 @@ Creative Lead, Good Kind
             </div>
 
           </div>
-
+<!-------------
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -677,7 +677,8 @@ Creative Lead, Good Kind
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> 
+          ---------->
 
         </div>
 
