--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         <h1 class="text-light"><a href="index.html">Zegenee Raphael Famous</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/zegyraph" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/rafizyefizy" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/famousraphael" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/ZeggyRaph" class="github"><i class="bx bxl-github"></i></a>
+         <a href="https://github.com/ZeggyRaph" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/raphael-zegenee-2753a11a2/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -359,7 +357,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-<!------------ <section id="portfolio" class="portfolio section-bg">
+ <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -473,7 +471,7 @@
         </div>
 
       </div>
-    </section> --------------->
+    </section> 
     <!-- End Portfolio Section -->  
 
     <!-- ======= Services Section ======= -->
@@ -691,7 +689,7 @@ Creative Lead, Good Kind
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>zeggytechnologies</span></strong>
+        &copy; Copyright <strong><span>iPortfolio</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
